--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,14 +6,16 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "http": "0.0.1-security",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.0.11",
     "morgan": "~1.9.1",
-    "bcrypt": "^5.0.1",
-    "cors": "^2.8.5",
     "nodemon": "^2.0.14",
-    "mongoose": "^6.0.11"
+    "socket.io": "^4.4.1"
   }
 }
