--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "ngx-socket-io": "^4.1.0",
     "rxjs": "~6.6.0",
     "socket.io-client": "^4.4.1",
